# facerecognizedemo_ncnn

./: LICENSE  README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/aqinn/facerecognizencnn/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: face_jni.cpp  recognize.cpp  retinaface.cpp  retinaface.hpp
app/src/main/java/com/aqinn/facerecognizencnn/: DARBitmapActivity.java  FaceActivity.java  FaceInfo.java  FaceRecognize.java  MainActivity.java  StreamActivity.java
app/src/main/java/com/aqinn/facerecognizencnn/utils/: CameraUtils.java  CommonUtils.java  FileUtils.java  Utils.java
app/src/main/java/com/aqinn/facerecognizencnn/view/: AutoFitTextureView.java  CameraSetting.java  DrawView.java  Holdable.java  MySurfaceHolder.java  PreviewFrameLayout.java
app/src/main/res/layout/: activity_darbitmap.xml  activity_face.xml  fragment_face_collect.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/aqinn/facerecognizencnn/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
